objects/WT_Goal__c.object
<CustomObject>
    <description>Object to hold all the goals assigned to any given user in the system</description>
    <fields>
        <fullName>WT_Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_BB_CB_Scorecard_Category__c</fullName>
        <label>BB/CB Scorecard Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$ Change in FIS Outstanding</fullName>
                </value>
                <value>
                    <fullName>$ International Fee</fullName>
                </value>
                <value>
                    <fullName>$ Loan Fees</fullName>
                </value>
                <value>
                    <fullName>$ New CRE Commitments</fullName>
                </value>
                <value>
                    <fullName>$ New Demand Accounts (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ New Demand Accounts (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ New Int Bearing Accounts (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ New Int Bearing Accounts (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ New Loan Commitments (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ New Loan Commitments (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ New Loan Outstandings (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ New Loan Outstandings (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ New SBA Loans</fullName>
                </value>
                <value>
                    <fullName>$ TM Fees</fullName>
                </value>
                <value>
                    <fullName># Face Calls Attended</fullName>
                </value>
                <value>
                    <fullName># Joint TM Calls</fullName>
                </value>
                <value>
                    <fullName># New Relationships</fullName>
                </value>
                <value>
                    <fullName># Phone Calls</fullName>
                </value>
                <value>
                    <fullName># Qualified Referrals</fullName>
                </value>
                <value>
                    <fullName>% Calls in LMI HM Census Tracts</fullName>
                </value>
                <value>
                    <fullName>% In/Out Ratio of New Loans</fullName>
                </value>
                <value>
                    <fullName>% of New Loans in LMI/HM Census Tracts</fullName>
                </value>
                <value>
                    <fullName>% Prospect Calling Coverage</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Total $ DDA</fullName>
                </value>
                <value>
                    <fullName>Total $ Int Bearing</fullName>
                </value>
                <value>
                    <fullName>Total $ Outstanding Loan Portfolio</fullName>
                </value>
                <value>
                    <fullName>Total # Business Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_CRE_Scorecard_Category__c</fullName>
        <label>CRE Scorecard Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName># Calls Made</fullName>
                </value>
                <value>
                    <fullName># New Relationships</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Commitments (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Commitments (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Fees</fullName>
                </value>
                <value>
                    <fullName>$ New TM Analysis Revenue</fullName>
                </value>
                <value>
                    <fullName>$ Deposit Balance Growth (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Deposit Balance Growth (FIS)</fullName>
                </value>
                <value>
                    <fullName># Swap Closed</fullName>
                </value>
                <value>
                    <fullName>$ Swap Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Date_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_Last_In_Progress_Rolled_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Rolled Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Goal_Level__c</fullName>
        <label>Goal Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Goal</fullName>
                </value>
                <value>
                    <fullName>Hub Goal</fullName>
                </value>
                <value>
                    <fullName>LOB Goal</fullName>
                </value>
                <value>
                    <fullName>Team Goal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Goal_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Metric</label>
        <referenceTo>WT_Goal_Metric__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Goal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_In_Progress__c</fullName>
        <label>In-Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_MM_Scorecard_Category__c</fullName>
        <label>MM Scorecard Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName># Calls Made</fullName>
                </value>
                <value>
                    <fullName># New Relationships</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Commitments (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Commitments (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Fees</fullName>
                </value>
                <value>
                    <fullName>$ Demand Balance Growth (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Demand Balance Growth (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Int Bearing Balance Growth (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Int Bearing Balance Growth (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ New TM Analysis Revenue</fullName>
                </value>
                <value>
                    <fullName># International Referrals (Trade and FX)</fullName>
                </value>
                <value>
                    <fullName>$ International Fees (Trade and FX)</fullName>
                </value>
                <value>
                    <fullName># Leasing Referrals</fullName>
                </value>
                <value>
                    <fullName>$ Lease Fundings</fullName>
                </value>
                <value>
                    <fullName># SBA Referrals</fullName>
                </value>
                <value>
                    <fullName>$ SBA Amount (amount staying on Wintrust books)</fullName>
                </value>
                <value>
                    <fullName># Swap Referrals</fullName>
                </value>
                <value>
                    <fullName>$ Swap Fees</fullName>
                </value>
                <value>
                    <fullName># Wealth Services Referrals</fullName>
                </value>
                <value>
                    <fullName>$ Wealth Services Investment Fees</fullName>
                </value>
                <value>
                    <fullName># Corporate Credit Card Referrals</fullName>
                </value>
                <value>
                    <fullName>$ Corporate Credit Card Revenue Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Parent_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Goal</label>
        <referenceTo>WT_Goal__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Percentage_Achieved__c</fullName>
        <label>Percentage To Goal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_RowNumber__c</fullName>
        <label>RowNumber</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Run_Rate_To_Goal__c</fullName>
        <label>Run Rate To Goal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_Should_Roll_Up_From_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll Up From Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_WS_Scorecard_Category__c</fullName>
        <label>WS Scorecard Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>$ Won Investment Fees</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Loan Originations - Outstandings (FIS)</fullName>
                </value>
                <value>
                    <fullName>$ Deposit Balance Growth (CRM)</fullName>
                </value>
                <value>
                    <fullName>$ Deposit Balance Growth (FIS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Goal_Metric__c</columns>
        <columns>WT_Actual__c</columns>
        <columns>WT_Target__c</columns>
        <columns>WT_Goal_Owner__c</columns>
        <columns>WT_Goal_Level__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GoalMetricsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(WT_Should_Roll_Up_From_Child__c = False,ISBLANK(WT_Goal_Metric__c))</errorConditionFormula>
        <errorDisplayField>WT_Goal_Metric__c</errorDisplayField>
        <errorMessage>GoalMetrics is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Goal_Access_New</fullName>
        <active>false</active>
        <description>This validation Rule is to through an error message when the user other than WT Business Admin trys to create/update goal record.</description>
        <errorConditionFormula>AND($Profile.Name !=&quot;WT Business Administrator&quot;,ISNEW())</errorConditionFormula>
        <errorMessage>The user does not have access to enter the goal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Goal_Access_Update</fullName>
        <active>false</active>
        <description>This Rules is to throw an error message when the user other than WT Business Admin tries to create new Goal record.</description>
        <errorConditionFormula>AND($Profile.Name !=&quot;WT Business Administrator&quot;,
$Profile.Name !=&quot;System Administrator&quot;,
OR(ISCHANGED( WT_Actual__c),
ISCHANGED( WT_CRE_Scorecard_Category__c),
ISCHANGED( WT_BB_CB_Scorecard_Category__c),
ISCHANGED( WT_Date_From__c),
ISCHANGED( WT_Goal_Level__c),
ISCHANGED( WT_Goal_Metric__c),
ISCHANGED( WT_Goal_Owner__c),
ISCHANGED( WT_In_Progress__c),
ISCHANGED( WT_Date_Last_In_Progress_Rolled_Up__c),
ISCHANGED( WT_MM_Scorecard_Category__c),
ISCHANGED( Name),
ISCHANGED( WT_Parent_Goal__c),
ISCHANGED( WT_Percentage_Achieved__c),
ISCHANGED( WT_Should_Roll_Up_From_Child__c),
ISCHANGED( WT_Run_Rate_To_Goal__c),
ISCHANGED( WT_Target__c),
ISCHANGED( WT_Date_To__c),
ISCHANGED( WT_WS_Scorecard_Category__c)
))</errorConditionFormula>
        <errorMessage>The user does not have access to update the goal</errorMessage>
    </validationRules>
</CustomObject>